item_5935_DELETE_COMPUTED_INHERITED_RULES
item_5935_DELETE_COMPUTED_INHERITED_RULES

item_5935_DELETE_COMPUTED_INHERITED_RULES

--- a/deployment/ansible-vitam/roles/vitam/templates/security-internal/personal-certificate-permissions.conf.j2
+++ b/deployment/ansible-vitam/roles/vitam/templates/security-internal/personal-certificate-permissions.conf.j2
@@ -110,3 +110,4 @@ permissionsWithoutPersonalCertificate:
   - 'preservationreport:id:read'
   - 'logbookoperations:create'
   - 'computeInheritedRules:action'
+  - 'computeInheritedRules:delete'
