Small fix to enable some appenders only when offers type-library

--- a/deployment/ansible-vitam/roles/vitam/templates/logback.xml.j2
+++ b/deployment/ansible-vitam/roles/vitam/templates/logback.xml.j2
@@ -68,7 +68,8 @@
 {% endif %}
 
 {% if vitam_struct.vitam_component == 'offer' %}
-  {% if vitam_struct.logback_rolling_policy|lower == "true" %}
+  {% if vitam_offers[offer_conf]["provider"] == 'tape-library' %}
+    {% if vitam_struct.logback_rolling_policy|lower == "true" %}
 	<appender name="OFFER_TAPE" class="ch.qos.logback.core.rolling.RollingFileAppender">
 		<rollingPolicy class="ch.qos.logback.core.rolling.SizeAndTimeBasedRollingPolicy">
 			<fileNamePattern>{{ vitam_folder_log }}/{{ vitam_struct.vitam_component }}_offer_tape.%d{yyyy-MM-dd}.%i.log</fileNamePattern>
@@ -76,20 +77,22 @@
 			<maxHistory>{{ days_to_delete_logback_logfiles }}</maxHistory>
 			<totalSizeCap>{{ vitam_struct.logback_total_size_cap }}</totalSizeCap>
 		</rollingPolicy>
-  {% else %}
+    {% else %}
 	<appender name="OFFER_TAPE" class="ch.qos.logback.core.FileAppender">
 		<file>{{ vitam_folder_log }}/{{ vitam_struct.vitam_component }}_offer_tape.log</file>
 		<append>true</append>
-  {% endif %}
+    {% endif %}
 		<encoder>
 			<pattern>%d{ISO8601} [[%thread]] [%X{X-Request-Id}] %-5level %logger - %replace(%caller{1..2}){'Caller\+1     at |\n',''} : %msg %rootException%n
 			</pattern>
 		</encoder>
 	</appender>
+  {% endif %}
 {% endif %}
 
 {% if vitam_struct.vitam_component == 'offer' %}
-  {% if vitam_struct.logback_rolling_policy|lower == "true" %}
+  {% if vitam_offers[offer_conf]["provider"] == 'tape-library' %}
+  	{% if vitam_struct.logback_rolling_policy|lower == "true" %}
 	<appender name="OFFER_TAPE_BACKUP" class="ch.qos.logback.core.rolling.RollingFileAppender">
 		<rollingPolicy class="ch.qos.logback.core.rolling.SizeAndTimeBasedRollingPolicy">
 			<fileNamePattern>{{ vitam_folder_log }}/{{ vitam_struct.vitam_component }}_tape_backup.%d{yyyy-MM-dd}.%i.log</fileNamePattern>
@@ -97,16 +100,17 @@
 			<maxHistory>{{ days_to_delete_logback_logfiles }}</maxHistory>
 			<totalSizeCap>{{ vitam_struct.logback_total_size_cap }}</totalSizeCap>
 		</rollingPolicy>
-  {% else %}
+  	{% else %}
 	<appender name="OFFER_TAPE_BACKUP" class="ch.qos.logback.core.FileAppender">
 		<file>{{ vitam_folder_log }}/{{ vitam_struct.vitam_component }}_tape_backup.log</file>
 		<append>true</append>
-  {% endif %}
+  	{% endif %}
 		<encoder>
 			<pattern>%d{ISO8601} [[%thread]] [%X{X-Request-Id}] %-5level %logger - %replace(%caller{1..2}){'Caller\+1     at |\n',''} : %msg %rootException%n
 			</pattern>
 		</encoder>
 	</appender>
+  {% endif %}
 {% endif %}
 
 	<appender name="SYSLOG" class="ch.qos.logback.classic.net.SyslogAppender">
