fixing dependances in modules + start moving computedInheritedRules worklfow launch

--- a/deployment/ansible-vitam/roles/vitam/templates/metadata/metadata.conf.j2
+++ b/deployment/ansible-vitam/roles/vitam/templates/metadata/metadata.conf.j2
@@ -1,4 +1,5 @@
 workspaceUrl: {{vitam.workspace | client_url}}
+urlProcessing: {{vitam.processing | client_url}}
 
 # Archive Unit Profile cache settings (max entries in cache & retention timeout in seconds)
 archiveUnitProfileCacheMaxEntries: {{ vitam.metadata.archiveUnitProfileCacheMaxEntries }}
