Add possibility to deploy vitam in a single VM without localhost hostname

--- a/deployment/ansible-vitam/roles/vitam/templates/offer/offer.conf.j2
+++ b/deployment/ansible-vitam/roles/vitam/templates/offer/offer.conf.j2
@@ -6,7 +6,7 @@ authentication : {{ vitam_struct.https_enabled }}
 # Configuration MongoDB
 mongoDbNodes:
 {% for server in groups['hosts-mongos-offer'] %}
-{% if hostvars[server]['mongo_cluster_name'] == offer_conf or inventory_hostname == 'localhost' %}
+{% if hostvars[server]['mongo_cluster_name'] == offer_conf or inventory_hostname in single_vm_hostnames %}
 - dbHost: {{ hostvars[server]['ip_service'] }}
   dbPort: {{ mongodb.mongos_port }}
 {% endif %}
