Item #5834 : Fix bug ihm on empty strategies in Management contracts

--- a/sources/ihm-demo/ihm-demo-front/src/app/referentials/details/management-contract/management-contract.component.html
+++ b/sources/ihm-demo/ihm-demo-front/src/app/referentials/details/management-contract/management-contract.component.html
@@ -72,7 +72,7 @@
                               class="ui-g-4 " [updateMode]="update"
                               [(updatedFields)]="updatedFields"></vitam-metadata-field>
         <vitam-metadata-field [title]="'Stockage des objets'" [originalTitle]="'ObjectStrategy'"
-                              [value]="modifiedContract.Storage.ObjectGroupStrategy" [labelSize]="4"
+                              [value]="modifiedContract.Storage.ObjectStrategy" [labelSize]="4"
                               class="ui-g-4 " [updateMode]="update"
                               [(updatedFields)]="updatedFields"></vitam-metadata-field>
       </div>
