--- a/deployment/ansible-vitam/roles/mongo_configure/templates/mongo-data/init-report-database.js.j2
+++ b/deployment/ansible-vitam/roles/mongo_configure/templates/mongo-data/init-report-database.js.j2
@@ -26,8 +26,10 @@ db.AuditObjectGroup.createIndex( { "processId" : 1, "_tenant" : 1 } )
 db.AuditObjectGroup.createIndex( { "processId" : 1, "_tenant" : 1, "_metadata.id" : 1 } )
 db.AuditObjectGroup.createIndex( { "processId" : 1, "_tenant" : 1, "_metadata.status" : 1 } )
 
-// Create indexes InvalidUnits
-db.InvalidUnits.createIndex( { "processId" : 1} )
+// Create indexes InvalidUnits (Computed inherited rules invalidation)
+db.InvalidUnits.createIndex( { "processId" : 1, "_tenant" : 1 } )
+db.InvalidUnits.createIndex( { "processId" : 1, "_tenant" : 1, "_metadata.id" : 1 } )
+db.InvalidUnits.dropIndex( { "processId" : 1} )
 
 // Create indexes EvidenceAuditReport
 db.EvidenceAuditReport.createIndex( { "processId" : 1, "_tenant" : 1 } )
