Fix #5879 : ihm demo management contract fix

--- a/sources/ihm-demo/ihm-demo-front/src/app/referentials/details/management-contract/management-contract.component.html
+++ b/sources/ihm-demo/ihm-demo-front/src/app/referentials/details/management-contract/management-contract.component.html
@@ -1,4 +1,4 @@
-<p-panel [header]="'Détail du contrat d\'entrée'">
+<p-panel [header]="'Détail du contrat de gestion'">
   <div class="ui-g" *ngIf="!saveRunning">
     <div class="ui-g-8"></div>
     <div class="ui-g-2" *ngIf="!update"></div>
