--- a/deployment/ansible-vitam/roles/vitam/templates/metadata/metadata.conf.j2
+++ b/deployment/ansible-vitam/roles/vitam/templates/metadata/metadata.conf.j2
@@ -9,7 +9,7 @@ archiveUnitProfileCacheTimeoutInSeconds: {{ vitam.metadata.archiveUnitProfileCac
 schemaValidatorCacheMaxEntries: {{ vitam.metadata.schemaValidatorCacheMaxEntries }}
 schemaValidatorCacheTimeoutInSeconds: {{ vitam.metadata.schemaValidatorCacheTimeoutInSeconds }}
 
-# DIP purge service
+# DIP purge service (in minutes)
 dipTimeToLiveInMinutes: {{ vitam.metadata.dipTimeToLiveInMinutes }}
 
 # Configuration MongoDB
