Item 5921 5922 ihm for export dip and transfer archive units

--- a/sources/ihm-demo/ihm-demo-front/src/app/archive-unit/archive-unit-details/archive-export-dip/archive-export-dip.component.html
+++ b/sources/ihm-demo/ihm-demo-front/src/app/archive-unit/archive-unit-details/archive-export-dip/archive-export-dip.component.html
@@ -1,22 +1,82 @@
 <p-panel [header]="'Génération du DIP'" [toggleable]="true" [collapsed]="false" *ngIf="id">
   <div class="ui-g">
     <div class="ui-g-4 textAlignLeft">
-      <p-radioButton value="AU" label="Unité archivistique" [(ngModel)]="exportType"></p-radioButton>
+      <p-radioButton value="AU" label="Unité archivistique" [(ngModel)]="exportChoice"></p-radioButton>
     </div>
     <div class="ui-g-8">
       <vitam-metadata-field [title]="'Liste blanche des usages'" [updateMode]="true" [originalTitle]="'DataObjectVersion'" [optionsFilter]="updatedFields"
       [value]="updatedFields" [labelSize]="4" class="ui-g-6" [(updatedFields)]="updatedFields"></vitam-metadata-field>
     </div>
     <div class="ui-g-4 textAlignLeft">
-      <p-radioButton value="FULL" label="Unité archivistique et sa descendance" [(ngModel)]="exportType"></p-radioButton>
+      <p-radioButton value="FULL" label="Unité archivistique et sa descendance" [(ngModel)]="exportChoice"></p-radioButton>
     </div>
     <div class="ui-g-8"></div>
     <div class="ui-g-4 textAlignLeft">
-      <p-radioButton value="INGEST" label="Ensemble de l'entrée" [(ngModel)]="exportType"></p-radioButton>
+      <p-radioButton value="INGEST" label="Ensemble de l'entrée" [(ngModel)]="exportChoice"></p-radioButton>
     </div>
+
+    <div class="ui-g-8"></div>
+    <div class="ui-g-4 textAlignLeft">
+      <span>Commentaire</span>
+      <input type="text" pInputText placeholder="Commentaire" [(ngModel)]="comment" />
+    </div>
+    <div class="ui-g-4 textAlignLeft">
+      <span>Archival Agreement (Required for Transfer Optional for DIP) </span>
+      <input type="text" pInputText placeholder="Archival Agreement" [(ngModel)]="archivalAgreement" />
+    </div>
+    <div class="ui-g-4 textAlignLeft">
+      <span>Originating Agency Identifier (Required for DIP)</span>
+      <input type="text" pInputText placeholder="Originating Agency Identifier" [(ngModel)]="originatingAgencyIdentifier" />
+    </div>
+    <div class="ui-g-4 textAlignLeft">
+      <span>Submission Agency Identifier</span>
+      <input type="text" pInputText placeholder="Submission Agency Identifier" [(ngModel)]="submissionAgencyIdentifier" />
+    </div>
+
+    <div class="ui-g-4 textAlignLeft">
+      <span>Archival Agency Identifier (Transfer and DIP Required)</span>
+      <input type="text" pInputText placeholder="Archival Agency Identifier" [(ngModel)]="archivalAgencyIdentifier" />
+    </div>
+
+    <div class="ui-g-4 textAlignLeft">
+      <span>Related Transfer Reference (Transfer Only, Not Required) </span>
+      <input type="text" pInputText placeholder="Related Transfer Reference" [(ngModel)]="relatedTransferReference" />
+    </div>
+
+    <div class="ui-g-4 textAlignLeft">
+      <span>Transfer Request Reply Identifier (Transfer Only, Not Required)</span>
+      <input type="text" pInputText placeholder="Transfer Request Reply Identifier" [(ngModel)]="transferRequestReplyIdentifier" />
+    </div>
+
+    <div class="ui-g-4 textAlignLeft">
+      <span>Transferring Agency (Transfer Only, Not Required)</span>
+      <input type="text" pInputText placeholder="Transferring Agency" [(ngModel)]="transferringAgency" />
+    </div>
+
+    <div class="ui-g-4 textAlignLeft">
+      <span>Message Request Identifier (Required for Transfer) </span>
+      <input type="text" pInputText placeholder="Message Request Identifier" [(ngModel)]="messageRequestIdentifier" />
+    </div>
+
+    <div class="ui-g-4 textAlignLeft">
+      <span>Requester Identifier (Required for Transfer)</span>
+      <input type="text" pInputText placeholder="Requester Identifier" [(ngModel)]="requesterIdentifier" />
+    </div>
+
+    <div class="ui-g-4 textAlignLeft">
+      <span>Authorization Request Reply Identifier (DIP Only Not Required)</span>
+      <input type="text" pInputText placeholder="Authorization Request Reply Identifier" [(ngModel)]="authorizationRequestReplyIdentifier" />
+    </div>
+
     <div class="ui-g-8"></div>
     <div class="ui-g-2">
-      <button pButton type="button" (click)="exportDIP()" label="Exporter"></button>
+      <button pButton type="button" (click)="export('MINIMAL')" label="DIP Minimal"></button>
+    </div>
+    <div class="ui-g-2">
+      <button pButton type="button" (click)="export('FULL')" label=" DIP Full"></button>
+    </div>
+    <div class="ui-g-2">
+      <button pButton type="button" (click)="export('TRANSFER')" label="Transfer"></button>
     </div>
   </div>
                               
