Add security internal permissions config Add ihm to handle exports

--- a/deployment/ansible-vitam/roles/vitam/templates/security-internal/personal-certificate-permissions.conf.j2
+++ b/deployment/ansible-vitam/roles/vitam/templates/security-internal/personal-certificate-permissions.conf.j2
@@ -8,6 +8,8 @@ permissionsWithoutPersonalCertificate:
   - 'dipexport:create'
   - 'dipexportv2:create'
   - 'dipexport:id:dip:read'
+  - 'transfers:create'
+  - 'transfers:id:sip:read'
   - 'logbookobjectslifecycles:id:read'
   - 'logbookoperations:read'
   - 'logbookoperations:id:read'
