From GET to POST

--- a/deployment/ansible-vitam/roles/metadata/templates/computed_inherited_rules.sh.j2
+++ b/deployment/ansible-vitam/roles/metadata/templates/computed_inherited_rules.sh.j2
@@ -13,7 +13,7 @@ function log() {
 
 function local_curl() {
     COLLECTION=${1}
-    curl -s -X GET -H "X-Tenant-Id: {{ vitam_tenant_admin }}" -H "Content-Type: application/json" --user "${VITAM_ADMIN_AUTH}" ${COMPUTED_INHERITED_RULES_URL}
+    curl -s -X POST -H "X-Tenant-Id: {{ vitam_tenant_admin }}" -H "Content-Type: application/json" --user "${VITAM_ADMIN_AUTH}" ${COMPUTED_INHERITED_RULES_URL}
     log "INFO" "${MSG}"
 }
 
